Ingress/webapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webappingress
spec:
  backend:
    serviceName: webspp-80
    servicePort: 80
